--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <!--NAVBAR END-->
 
       <!-- The overlay -->
-      <div id="myNav" class="overlay">
+      <div id="myNav" class="overlay" style="z-index:999;">
         <!-- Button to close the overlay navigation -->
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
@@ -182,7 +182,7 @@
   <div id="two" class="container-blue"style="text-align:center; padding: 10px 0px 30px 40px;">
     <div style="display: inline-block; margin:135px 0 20px 0px; text-align:center;">
       <h1  class="h1-2" style="color:#f0f1f2;">Skills</h1>
-      <h2 class="text-in-1" style="color:#f0f1f2;">I KNOW A THING OR TWO ABOUT</h1>
+      <h2 class="header2" style="color:#f0f1f2;">I KNOW A THING OR TWO ABOUT</h1>
         <!--div class="p-container-700">
             <p class="text-in-1" style="color:#f0f1f2;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mi elit, finibus
             sit amet mi tincidunt, ornare efficitur lorem. Cras aliquet tellus ut dapibus
@@ -194,10 +194,10 @@
     <!--Skills IMGs-->
     <div class="lidiv">
       <ul style="text-align:center; color:#fff;" class="imgs">
-        <li><img class="img-skill" style="max-width:120px; border-radius:50%;" src="https://dl.dropboxusercontent.com/s/jai41kxeurorla0/ux-ui-200.png?dl=0"><h3>UX / UI DESIGN</h3><hr class="hr-one"><p class="hr-three" style="text-align:center; margin-top:-10px; font-size:14px; padding: 0px 10px; color:#f2f2f2; font-family:'open sans', sans-serif;">Enhancing user satisfaction by improving the usability, accessibility, and pleasure provided in the interaction with the product.</p></li>
-        <li><img class="img-skill" style="max-width:120px; border-radius:50%;" src="https://dl.dropboxusercontent.com/s/5xe37stbw9mbqtc/fron-end-dev-200.png?dl=0"><h3>{FRONT END DEV}</h3><hr class="hr-one"><p class="hr-three" style="text-align:center; margin-top:-10px; font-size:14px; padding: 0px 10px; color:#f2f2f2; font-family:'open sans', sans-serif;">The practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly.</p></li>
-        <li><img class="img-skill" style="max-width:120px; border-radius:50%;" src="https://dl.dropboxusercontent.com/s/wffweznkfx8r5io/design-thinking-200.png?dl=0"><h3>DESIGN THINKING</h3><hr class="hr-one"><p class="hr-three" style="text-align:center; margin-top:-10px; font-size:14px; padding: 0px 10px; color:#f2f2f2; font-family:'open sans', sans-serif;"> A methodology not exclusive for designers, that helps people understand and develop creative ways to solve a specific issue, generally business oriented.</p></li>
-        <li><img class="img-skill" style="max-width:120px; border-radius:50%;" src="https://dl.dropboxusercontent.com/s/wqo42085xijj99d/business-strategy-200.png?dl=0"><h3>BUSINESS STRATEGY</h3><hr class="hr-one"><p class="hr-three" style="text-align:center; margin-top:-10px; font-size:14px; padding: 0px 10px; color:#f2f2f2; font-family:'open sans', sans-serif;">Involves specifying the organization's objectives, developing policies and plans designed to achieve these objectives.</p></li>
+        <li><img class="img-skill" style="border-radius:50%;" src="https://dl.dropboxusercontent.com/s/jai41kxeurorla0/ux-ui-200.png?dl=0"><h3>UX / UI DESIGN</h3><hr class="hr-one"><p class="hr-three" style="text-align:center; margin-top:-10px; font-size:14px; padding: 0px 10px; color:#f2f2f2; font-family:'open sans', sans-serif;">Enhancing user satisfaction by improving the usability, accessibility, and pleasure provided in the interaction with the product.</p></li>
+        <li><img class="img-skill" style="border-radius:50%;" src="https://dl.dropboxusercontent.com/s/5xe37stbw9mbqtc/fron-end-dev-200.png?dl=0"><h3>{FRONT END DEV}</h3><hr class="hr-one"><p class="hr-three" style="text-align:center; margin-top:-10px; font-size:14px; padding: 0px 10px; color:#f2f2f2; font-family:'open sans', sans-serif;">The practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly.</p></li>
+        <li><img class="img-skill" style="border-radius:50%;" src="https://dl.dropboxusercontent.com/s/wffweznkfx8r5io/design-thinking-200.png?dl=0"><h3>DESIGN THINKING</h3><hr class="hr-one"><p class="hr-three" style="text-align:center; margin-top:-10px; font-size:14px; padding: 0px 10px; color:#f2f2f2; font-family:'open sans', sans-serif;"> A methodology not exclusive for designers, that helps people understand and develop creative ways to solve a specific issue, generally business oriented.</p></li>
+        <li><img class="img-skill" style="border-radius:50%;" src="https://dl.dropboxusercontent.com/s/wqo42085xijj99d/business-strategy-200.png?dl=0"><h3>BUSINESS STRATEGY</h3><hr class="hr-one"><p class="hr-three" style="text-align:center; margin-top:-10px; font-size:14px; padding: 0px 10px; color:#f2f2f2; font-family:'open sans', sans-serif;">Involves specifying the organization's objectives, developing policies and plans designed to achieve these objectives.</p></li>
       </ul>
     </div>
   </div>
@@ -207,7 +207,7 @@
 <div class="container-grey" style="text-align:center; padding-left:40px;">
   <div style="display: inline-block; margin:130px 0 30px 0px; text-align:center;">
     <h1 class="h1-2" style="color:#f0f1f2;">Let's Connect.</h1>
-    <h2 class="text-in-1" style="color:#f0f1f2;">how may I help you?</h1>
+    <h2 class="header2" style="color:#f0f1f2;">how may I help you?</h1>
       <div class="p-container-700">
           <p class="text-in-1" style="color:#f0f1f2;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mi elit, finibus
           sit amet mi tincidunt, ornare efficitur lorem. Cras aliquet tellus ut dapibus
@@ -260,9 +260,9 @@
 
 <!--Portfolio-->
 <div id="three" class="text-in-1"style="text-align:center; margin:0px 0px 150px 0px; padding-left:40px;">
-<div style="display: inline-block; margin:120px 0 50px 0px; text-align:center;">
+<div style="display: inline-block; margin:120px 0 0px 0px; text-align:center;">
   <h1 class="h1-2" style="color:#313746;">Portfolio</h1>
-  <h2 class="text-in-1" style="color:#474E62;">A thing from the past</h1>
+  <h2 class="header2" style="color:#474E62;">A thing from the past</h1>
     <!--div class="p-container-700">
         <p class="text-in-1" style="color:#686F84;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mi elit, finibus
         sit amet mi tincidunt, ornare efficitur lorem. Cras aliquet tellus ut dapibus
@@ -608,7 +608,7 @@
 <div id="four" class="container-yellow"style="text-align:center; padding-left:40px;">
 <div style="display: inline-block; margin:150px 0 40px 0px; text-align:center;">
   <h1 class="h1-2" style="color:#313746;">Education</h1>
-  <h2 class="text-in-1" style="color:#474E62;">Trust Me, I'm an engineer</h1>
+  <h2 class="header2" style="color:#474E62;">Trust Me, I'm an engineer</h1>
     <!--div class="p-container-700">
         <p class="text-in-1" style="color:#686F84;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mi elit, finibus
         sit amet mi tincidunt, ornare efficitur lorem. Cras aliquet tellus ut dapibus
@@ -632,7 +632,7 @@
 <div id="five" style="text-align:center; padding-left:40px;">
 <div style="display: inline-block; margin:100px 0 30px 0px; text-align:center;">
   <h1 class="h1-2" style="color:#313746;">Hey!</h1>
-  <h2 class="text-in-1" style="color:#474E62;">ready to make the call?</h1>
+  <h2 class="header2" style="color:#474E62;">ready to make the call?</h1>
     <div class="p-container-700">
         <p class="text-in-1" style="color:#686F84;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mi elit, finibus
         sit amet mi tincidunt, ornare efficitur lorem. Cras aliquet tellus ut dapibus
@@ -642,13 +642,11 @@
     </div>
 <!--BUTTON 1-->
 </div>
-<div class="cube-content">
-<div style="text-align:center; margin-top:30px;">
+
+<div style="text-align:center; margin-top:30px; padding-bottom:120px;">
 <button class="button_oscar2" style="font-size:16px; font-weight:400; opacity:1;" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">GET IN TOUCH</button></p>
 </div>
-<!--div class="block block2">
-</div-->
-</div>
+
 
 </div>
 </div>
@@ -687,13 +685,13 @@
 <div class="container-grey" style="padding-top:30px; display:table; width:100%; text-align:center; padding-left:40px; border-top: 10px solid #111;">
   <div style="display:table-box; width:60%; float:left; margin:0px 0 0px 50px; text-align:left;">
       <div class="p-container-700" style="color:#f0f1f2;">
-          <h2 style="font-size:18px;">HELLO@OSCARLUND.COM</h2>
+          <h2 style="font-size:18px;"><b>HELLO@OSCARLUND.COM</b></h2>
           <h3 class="text-in-1" style="font-size:14px; color:#f0f1f2;">+46 730 30 82 59<br>Gothenburg  /  Sweden</h3>
       </div>
   </div>
   <div style="display:table-box; width:30%; float:left; margin:0px 0 0px 50px; text-align:left;">
       <div class="p-container-700" style="color:#f0f1f2;">
-          <h2 style="font-size:18px;">MY RESUMÉ</h2>
+          <h2 style="font-size:18px;"><b>MY RESUMÉ</b></h2>
           <h3 class="text-in-1" style="font-size:14px; color:#f0f1f2;">Get a PDF version of my CV.<br>View or download below.</h3>
       </div>
       <div style="padding-bottom:30px;">
