--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <!--Everything below left-margin:40px;--->
 
       <!--Design + Strategy-->
-    <div class="text-in-1"style="text-align:center; padding-left:40px;">
+    <div class="text-in-1"style="text-align:center; padding-left:40px; width:100%;">
       <div style="display: inline-block; margin:170px 0 220px 0px; text-align:center;">
         <h1 class="text-in-1" style="color:#313746;">Design <span style="font-size:50pt;">+</span> Strategy</h1>
         <h2 class="text-in-1" style="color:#474E62;">Oscar Lund</h1>
@@ -180,7 +180,7 @@
     </div>
 
     <!--Skills-->
-  <div id="two" class="container-blue"style="text-align:center; padding: 10px 0px 30px 40px;">
+  <div id="two" class="container-blue"style="text-align:center; padding: 10px 0px 30px 40px; width:100%;">
     <div style="display: inline-block; margin:135px 0 20px 0px; text-align:center;">
       <h1  class="h1-2" style="color:#f0f1f2;">Skills</h1>
       <h2 class="header2" style="color:#f0f1f2;">I KNOW A THING OR TWO ABOUT</h1>
@@ -205,7 +205,7 @@
 
 
   <!--Contact Me 1-->
-<div class="container-grey" style="text-align:center; padding-left:40px;">
+<div class="container-grey" style="text-align:center; padding-left:40px; width:100%;">
   <div style="display: inline-block; margin:130px 0 30px 0px; text-align:center;">
     <h1 class="h1-2" style="color:#f0f1f2;">Let's Connect.</h1>
     <h2 class="header2" style="color:#f0f1f2;">how may I help you?</h1>
@@ -260,7 +260,7 @@
 </div>
 
 <!--Portfolio-->
-<div id="three" class="text-in-1"style="text-align:center; margin:0px 0px 150px 0px; padding-left:40px;">
+<div id="three" class="text-in-1"style="text-align:center; margin:0px 0px 150px 0px; padding-left:40px; width:100%;">
 <div style="display: inline-block; margin:120px 0 0px 0px; text-align:center;">
   <h1 class="h1-2" style="color:#313746;">Portfolio</h1>
   <h2 class="header2" style="color:#474E62;">A thing from the past</h1>
@@ -606,7 +606,7 @@
 </div>
 
 <!--Education-->
-<div id="four" class="container-yellow"style="text-align:center; padding-left:40px;">
+<div id="four" class="container-yellow"style="text-align:center; padding-left:40px; width:100%;">
 <div style="display: inline-block; margin:150px 0 40px 0px; text-align:center;">
   <h1 class="h1-2" style="color:#313746;">Education</h1>
   <h2 class="header2" style="color:#474E62;">Trust Me, I'm an engineer</h1>
@@ -630,7 +630,7 @@
 
 
 <!--Contact Me 2-->
-<div id="five" style="text-align:center; padding-left:40px;">
+<div id="five" style="text-align:center; padding-left:40px; width:100%;">
 <div style="display: inline-block; margin:100px 0 30px 0px; text-align:center;">
   <h1 class="h1-2" style="color:#313746;">Hey!</h1>
   <h2 class="header2" style="color:#474E62;">ready to make the call?</h1>
