--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
       </div>
       <div style="padding-bottom:30px;">
       <div style="text-align:left; margin-top:30px;">
-      <button class="button_oscar3" style="font-size:16px; font-weight:400; opacity:1;">VIEW PDF CV</button></p>
+      <button class="button_oscar3" style="font-size:16px; width:50px; font-weight:400; opacity:1;">VIEW PDF CV</button></p>
       </div>
   </div>
 </div>
