--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
 </div>
 
 <!--FOOTER-->
-<div class="container-grey" style="padding-top:30px; display:table; width:100%; text-align:center; padding-left:40px; border-top: 10px solid #111;">
+<div class="container-grey" style="overflow:hidden; padding-top:30px; display:table; width:100%; text-align:center; padding-left:40px; border-top: 10px solid #111;">
   <div style="display:table-box; width:60%; float:left; margin:0px 0 0px 50px; text-align:left;">
       <div class="p-container-700" style="color:#f0f1f2;">
           <h2 style="font-size:18px;"><b>HELLO@</b></h2>
