--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="google-site-verification" content="oqNballUYE1sCwV-EDWFVFNZdvihstpf7yBWlWnEADY" />
 
-      <title>Bootstrap 4 - NAVBAR</title>
+      <title>Oscar Lund | Designer</title>
       <!--Bootstrap-->
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/stylesheet.css" rel="stylesheet">
