--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       <div class="text-in-2" style="background:url(https://dl.dropboxusercontent.com/s/09je1evas5in206/firstpage-portfolio.jpg);
       background-repeat:no-repeat; background-size:cover; background-position:center; background-color:#76c6d4;
-      text-align:center; height: 100%; width:100%; overflow:hidden;">
+      text-align:center; height: 100vh; width:100%; overflow:hidden;">
 
         <!--div style="position:relative; top:50%; transform: translateY(-50%);"-->
 
