--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       <div class="text-in-2" style="background:url(https://dl.dropboxusercontent.com/s/09je1evas5in206/firstpage-portfolio.jpg);
       background-repeat:no-repeat; background-size:cover; background-position:center; background-color:#76c6d4;
-      text-align:center; height: 100vh; width:100%; overflow:hidden;">
+      text-align:center; height: 100vh; width:80%; overflow:hidden;">
 
         <!--div style="position:relative; top:50%; transform: translateY(-50%);"-->
 
@@ -137,7 +137,7 @@
       </div-->
 
         <div style="position:relative; top:75%; transform: translateY(-75%); color:#eee; font-family:'open sans', sans-serif; font-size:26px; " class="text-in-1">
-          <span style="font-weight:300; color:#eee;" class="typeeffect"></span>
+          <span style="font-weight:300; font-size:14px; color:#eee;" class="typeeffect"></span>
           <span style="font-weight:600; color:#ddd;" class="typeeffect2"></span>
 
         </div>
