--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <title>Oscar Lund | Designer</title>
+      <title>Bootstrap 4 - NAVBAR</title>
       <!--Bootstrap-->
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/stylesheet.css" rel="stylesheet">
@@ -136,9 +136,9 @@
         <img  style="width:80%;" src="https://dl.dropboxusercontent.com/s/09je1evas5in206/firstpage-portfolio.jpg?dl=0">
       </div-->
 
-        <div style="position:relative; top:70%; transform: translateY(-70%); color:#eee; font-family:'open sans', sans-serif; font-size:26px; " class="text-in-1">
-          <span style="font-weight:300; font-size:12px; color:#eee;" class="typeeffect"></span>
-          <span style="font-weight:600; font-size:12px; color:#ddd;" class="typeeffect2"></span>
+        <div style="position:relative; top:65%; transform: translateY(-65%); color:#eee; font-family:'open sans', sans-serif; font-size:26px; " class="text-in-1">
+          <span style="font-weight:300; color:#eee;" class="typeeffect"></span>
+          <span style="font-weight:600; color:#ddd;" class="typeeffect2"></span>
 
         </div>
 
