--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
       </div-->
 
         <div style="position:relative; top:65%; transform: translateY(-65%); color:#eee; font-family:'open sans', sans-serif; font-size:26px; " class="text-in-1">
-          <span style="font-weight:300; font-size:12px; color:#eee;" class="typeeffect"></span>
-          <span style="font-weight:600; font-size:12px; color:#ddd;" class="typeeffect2"></span>
+          <span style="font-weight:300; line-height: 17px; font-size:14px; color:#eee;" class="typeeffect"></span>
+          <span style="font-weight:600; line-height: 17px; font-size:14px; color:#ddd;" class="typeeffect2"></span>
 
         </div>
 
