--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
         <img  style="width:80%;" src="https://dl.dropboxusercontent.com/s/09je1evas5in206/firstpage-portfolio.jpg?dl=0">
       </div-->
 
-        <div style="position:relative; top:65%; transform: translateY(-65%); color:#eee; font-family:'open sans', sans-serif; font-size:26px; " class="text-in-1">
-          <span style="font-weight:300; line-height: 17px; font-size:16px; color:#eee;" class="typeeffect"></span>
-          <span style="font-weight:600; line-height: 17px; font-size:16px; color:#ddd;" class="typeeffect2"></span>
+        <div style="position:relative; top:65%; transform: translateY(-65%); color:#eee; font-family:'open sans', sans-serif; font-size:26px; line-height: 17px;  " class="text-in-1">
+          <span style="font-weight:300; line-height: 14px; font-size:16px; color:#eee;" class="typeeffect"></span>
+          <span style="font-weight:600; line-height: 14px; font-size:16px; color:#ddd;" class="typeeffect2"></span>
 
         </div>
 
