--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <link href="css/stylesheet.css" rel="stylesheet">
       <link href="css/layout.css" rel="stylesheet">
       <link rel="stylesheet" href="css/animate.css">
+      <link rel="icon" type="image/png" href="/imgs/fav1.png" />
 
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
