--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
     </div>
     <div style="padding-bottom:0px;">
         <div class="button-container" style="margin-top:30px;">
-        <button onclick="window.open('documents/cv_oscarlund.pdf');" type="submit" formtarget="_blank" rel="noopener noreferrer" class="button_oscar3" style="font-size:16px; font-weight:400; opacity:1;">VIEW PDF CV</button>
+        <button onclick="window.open('cv.html');" type="submit" formtarget="_blank" rel="noopener noreferrer" class="button_oscar3" style="font-size:16px; font-weight:400; opacity:1;">VIEW PDF CV</button>
         </div>
     </div>
 
