--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
   </head>
   <body style="position: relative;">
     <div class="container-pdf">
-    <embed style="width:100%; height:100vh;" src="documents/cv_oscarlund.pdf" type='application/pdf'>
+    <embed style="width:100%; height:100vh;" src="/documents/cv_oscarlund.pdf" type='application/pdf'>
     </div>
   </body>
 </html>
