--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <span style="font-weight:600; color:#ddd;" class="typeeffect2"></span>
         </div>
 
-        <div style="position:absolute; bottom:20px; width:100%;">
+        <div class="arrow-down-container" style="position:absolute; width:100%;">
         <div class="heart-conten">
           <a href="#one"><div class="arrow arrow-down"><img style="width:20px;" src="imgs/arrow-down_200.png"></img></div> </a>
           <div clas="heart heart1"></div>
