--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       background-repeat:no-repeat; background-size:cover; background-position:center; background-color:#76c6d4;
       text-align:center; height: 100vh; width:100%; overflow:hidden;">
 
-        <div style="position:relative; top:77%; transform: translateY(-77%); color:#eee; font-family:'open sans', sans-serif;" class="write-on text-in-1">
+        <div class="write-on write-on-text" style="position:relative; color:#eee; font-family:'open sans', sans-serif;">
           <span style="font-weight:300; color:#eee;" class="typeeffect"></span>
           <span style="font-weight:600; color:#ddd;" class="typeeffect2"></span>
         </div>
