--- a/index.html
+++ b/index.html
@@ -481,9 +481,9 @@
     <!--Skills IMGs-->
     <div class="lidiv">
       <ul style="text-align:center; color:#313746;" class="imgs2">
-        <li><img class="img-skill2" style="max-width:120px; border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/chalmers_ico2.png"><h3>CHALMERS<br><p style="text-transform:uppercase; color:#555;">Gothenburg</p></h3></li>
-        <li><img class="img-skill2" style="max-width:120px; border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/upc_ico.png"><h3>ETSEIB<br><p style="text-transform:uppercase; color:#555;">Barcelona</p></h3></li>
-        <li><img class="img-skill2" style="max-width:120px; border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/harvard_ico2.png"><h3>HARVARD<br><p style="text-transform:uppercase; color:#555;">Cambridge</p></h3></li>
+        <li><img class="img-skill2" style="border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/chalmers_ico2.png"><h3>CHALMERS<br><p style="text-transform:uppercase; color:#555;">Gothenburg</p></h3></li>
+        <li><img class="img-skill2" style="border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/upc_ico.png"><h3>ETSEIB<br><p style="text-transform:uppercase; color:#555;">Barcelona</p></h3></li>
+        <li><img class="img-skill2" style="border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/harvard_ico2.png"><h3>HARVARD<br><p style="text-transform:uppercase; color:#555;">Cambridge</p></h3></li>
       </ul>
     </div>
   </div>
