--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
       background-repeat:no-repeat; background-size:cover; background-position:center; background-color:#76c6d4;
       text-align:center; height: 100vh; width:100%; overflow:hidden;">
 
-        <div style="position:relative; top:77%; transform: translateY(-77%); color:#eee; font-family:'open sans', sans-serif;" class="write-on text-in-1">
+        <div class="write-on write-on-text" style="position:relative; color:#eee; font-family:'open sans', sans-serif;">
           <span style="font-weight:300; color:#eee;" class="typeeffect"></span>
           <span style="font-weight:600; color:#ddd;" class="typeeffect2"></span>
         </div>
 
-        <div style="position:absolute; bottom:20px; width:100%;">
+        <div class="arrow-down-container" style="position:absolute; width:100%;">
         <div class="heart-conten">
           <a href="#one"><div class="arrow arrow-down"><img style="width:20px;" src="imgs/arrow-down_200.png"></img></div> </a>
           <div clas="heart heart1"></div>
@@ -481,9 +481,9 @@
     <!--Skills IMGs-->
     <div class="lidiv">
       <ul style="text-align:center; color:#313746;" class="imgs2">
-        <li><img class="img-skill2" style="max-width:120px; border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/chalmers_ico2.png"><h3>CHALMERS<br><p style="text-transform:uppercase; color:#555;">Gothenburg</p></h3></li>
-        <li><img class="img-skill2" style="max-width:120px; border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/upc_ico.png"><h3>ETSEIB<br><p style="text-transform:uppercase; color:#555;">Barcelona</p></h3></li>
-        <li><img class="img-skill2" style="max-width:120px; border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/harvard_ico2.png"><h3>HARVARD<br><p style="text-transform:uppercase; color:#555;">Cambridge</p></h3></li>
+        <li><img class="img-skill2" style="border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/chalmers_ico2.png"><h3>CHALMERS<br><p style="text-transform:uppercase; color:#555;">Gothenburg</p></h3></li>
+        <li><img class="img-skill2" style="border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/upc_ico.png"><h3>ETSEIB<br><p style="text-transform:uppercase; color:#555;">Barcelona</p></h3></li>
+        <li><img class="img-skill2" style="border-radius:50%; box-shadow:0px 1px 5px #ccc;" src="imgs/harvard_ico2.png"><h3>HARVARD<br><p style="text-transform:uppercase; color:#555;">Cambridge</p></h3></li>
       </ul>
     </div>
   </div>
@@ -511,7 +511,7 @@
     </div>
     <div style="padding-bottom:0px;">
         <div class="button-container" style="margin-top:30px;">
-        <button onclick="window.open('/assets/documents/CV_OscarLund.pdf');" type="submit" formtarget="_blank" rel="noopener noreferrer" class="button_oscar3" style="font-size:16px; font-weight:400; opacity:1;">VIEW PDF CV</button>
+        <button onclick="window.open('assets/documents/cv_oscarlund.pdf');" type="submit" formtarget="_blank" rel="noopener noreferrer" class="button_oscar3" style="font-size:16px; font-weight:400; opacity:1;">VIEW PDF CV</button>
         </div>
     </div>
 
