--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         -o-background-size: cover;
         background-size: cover;
         background-color:#fff; text-align:left; padding-left:0px; height:100vh;">
-      <div class="" style="display: inline-block; padding:130px 75px 130px 75px; text-align:center;">
+      <div class="design-text" style="display: inline-block; text-align:center;">
           <h1 class"text-in-1" style="">Design <span>Strategy.</span></h1>
           <h2 class"text-in-1" style="">Oscar Lund. Freelance Designer.</h2>
           <p class="h3top" >Sharp, value adding design for web & print.</p>
