--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
       <a target="blank" rel="noopener noreferrer" href="https://www.facebook.com/oscarlund01"><img class="img-skill" src="imgs/social_media/svg/facebook.svg"></a>
       <a target="blank" rel="noopener noreferrer" href="https://se.linkedin.com/in/oscarlund"><img class="img-skill" src="imgs/social_media/svg/linkedin.svg"></a>
       <a target="blank" rel="noopener noreferrer" href="https://plus.google.com/u/0/117118642473133874666"><img class="img-skill" src="imgs/social_media/svg/google-plus.svg"></a>
-      <a target="blank" rel="noopener noreferrer" href="skype:oscar.lund?call"><img class="img-skill" src="imgs/social_media/svg/skype.svg"></a>
+      <a target="blank" rel="noopener noreferrer" href="tel:+46730308259"><img class="img-skill" src="imgs/social_media/svg/skype.svg"></a>
     </div>
     <div>
       <a href="mailto:hello@oscarlund.com?Subject=Hello%20Oscar" target="_top"><img style="width:30px;" src="imgs/email.svg"><br>Or Contact me by Mail.</a>
