--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name = "viewport" content = "user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width /">
+      <meta name="apple-mobile-web-app-capable" content="yes"/>
 
       <title>olund.co</title>
       <!--Bootstrap-->
@@ -464,7 +465,7 @@
       <a target="blank" rel="noopener noreferrer" href="https://www.facebook.com/oscarlund01"><img class="img-skill" src="imgs/social_media/svg/facebook.svg"></a>
       <a target="blank" rel="noopener noreferrer" href="https://se.linkedin.com/in/oscarlund"><img class="img-skill" src="imgs/social_media/svg/linkedin.svg"></a>
       <a target="blank" rel="noopener noreferrer" href="https://plus.google.com/u/0/117118642473133874666"><img class="img-skill" src="imgs/social_media/svg/google-plus.svg"></a>
-      <a target="blank" rel="noopener noreferrer" href="callto:+46730308259"><img class="img-skill" src="imgs/social_media/svg/skype.svg"></a>
+      <a target="blank" rel="noopener noreferrer" href=”callto:+46730308259”><img class="img-skill" src="imgs/social_media/svg/skype.svg"></a>
     </div>
     <div>
       <a href="mailto:hello@oscarlund.com?Subject=Hello%20Oscar" target="_top"><img style="width:30px;" src="imgs/email.svg"><br>Or Contact me by Mail.</a>
