--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <meta name = "viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1.0">
-      <meta name="author" content="oscarlund"
+      <meta name="author" content="oscarlund">
 
       <title>olund.co</title>
       <!--Bootstrap-->
